--- a/resources/sass/_tooltip.scss
+++ b/resources/sass/_tooltip.scss
@@ -123,7 +123,7 @@
       }
     }
     .big {
-      font-size: 3.2em;
+      font-size: 2.8em;
       line-height: 1.1;
       color: white;
       list-style-type: none;
